fixed document height on mobile phones to fit all buttons and content in one single view

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -479,6 +479,10 @@ header {
         font-size: 0;
     }
 
+    #weaponSelection {
+        height: 115px;
+    }
+
     #weaponSelection div {
         height: 100px;
         width: 100px;        
